--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -94,13 +94,13 @@
       </div>
       <div class="row" id="nav-inferior">
         <div class="col d-flex py-2">
-          <div class="img-logo my-auto ms-2">
+          <div class="img-logo my-auto ms-3">
             <a href="/">
               <img src="{% static 'images/logo_casa.png' %}" class="img-fluid">
             </a>
           </div>
-          <div class="nv-titulo my-auto ms-3">
-            <h1 style="font-size: 28px;">Casa do Trabalhador</h1>
+          <div class="nv-titulo my-auto ms-4 pt-2">
+            <h1 style="font-size: 30px;">Casa do Trabalhador</h1>
           </div>
           <div class="nv-social ms-auto d-flex">
             <div class="d-flex my-auto me-3">
@@ -119,7 +119,7 @@
   </header>  
   {% block nav %}{% endblock %}
 
-  <div id="mainBlock" class="main-content pt-5 pb-5 px-5 mx-4">
+  <div id="mainBlock" class="main-content pb-5 px-5 mx-4">
    {% block main %}{% endblock %}
   </div>
   {% block footer %}
