--- a/vagas/templates/vagas/cadastrar_vagaOfertada.html
+++ b/vagas/templates/vagas/cadastrar_vagaOfertada.html
@@ -1,120 +1,124 @@
-{% extends 'base_site.html' %}
+{% extends 'template.html' %}
 {% block title %}{{tipo_cadastro}} Vaga{% endblock %}
 {% block css %}
 {{block.super}}
 {% endblock%}
-{% block main_conteudo %}
+{% block main %}
 {% load widget_tweaks %}   
 {% load bootstrap5 %}  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> 
-{% if success.0 %}
-<div class="row px-4 mb-3">
-    <div class="col d-flex bg-success py-2">
-        <p class="m-auto text-white">{{success.1}}</p>
-    </div>
-</div>
-{% endif %}                  
-<div class="row">    
-    <div class="col d-flex">
-        <h2 class="text-start text-uppercase">{{ tipo_cadastro }} VAGA OFERTADA</h2>
-        {% if request.user.is_authenticated %}
-            {% if tipo_cadastro == 'Alterar' %}
-            <span class="ms-auto"><a class="btn btn-btfl bg-danger" href="{% url 'vagas:remover_vaga' id %}">Remover</a></span>
-            {% endif %}      
-            {% if tipo_cadastro == '' %}
-            <span class="ms-auto"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:listar_candidatos' id %}">Candidatos</a></span>      
-            {% endif %}
-        {% endif %}
-
-            <span class="{% if not request.user.is_authenticated %}ms-auto{% else %}{% if tipo_cadastro == 'cadastrar' %}ms-auto{% else %}ms-2{% endif %}{% endif %}"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:vagas' %}">Vagas Ofertadas</a></span>
-        
-            {% if request.user.is_authenticated %}
-            {% if tipo_cadastro == '' %}
-            <span class="ms-2"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:alterar_vaga' id %}"><i class="fas fa-edit"></i></a></span>
-            {% endif %}
-            {% if tipo_cadastro == 'alterar' %}
-            <span class="ms-2"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:visualizar_vaga' id %}">Voltar</a></span>
-            {% endif %}
-        {% endif %}      
-    </div>
-  </div>
-  <div class="row">
-    <div class="col py-4 text-start d-flex">
-       <div class="m-auto">
-        <p><b>Para mais informações sobre essa vaga:</b></p>
-        <p><i class="fab fa-whatsapp me-1"></i> (22) 99793-5451</p>
-        <p><i class="fas fa-phone-alt me-1"></i> (22) 2525-9205</p>
-        <p><i class="fas fa-map-marker-alt me-2"></i> Av. Alberto Braune - 223 (Antiga rodoviária)</p>
-       </div>
-    </div>
-  </div>
-<form id="form_cadastro_vaga" {% if tipo_cadastro != '' %}method="post"{% endif %} class="form w-100 text-start">
-    <div class="row">
-        <div class="col">
-            <h4>Detalhes da vaga:</h4>
+<div class="row pt-5 mt-5">
+    <div class="col-8 mx-auto pt-5 mt-5">
+        {% if success.0 %}
+        <div class="row px-4 mb-3">
+            <div class="col d-flex bg-success py-2">
+                <p class="m-auto text-white">{{success.1}}</p>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col pt-3 px-5">
-            {% csrf_token %}
-            {% for f in form %}                
-            {% if not f.name in hidden %}
-            
-                <label class="text-uppercase" for="id_{{f.name}}">{{f.label}}:</label>
-            
-            {% endif %}
-            {% if f.errors %}
-            {% if f.name == 'cargo' %}
-            <input name="cargo"  {% if tipo_cadastro == '' %}disabled{% endif %}   autocomplete="off" id="id_vaga" onkeyup="searchVaga(this)" type="text" class="form-control bg-light mb-2 is-invalid" value="{{cargo}}">                
-            <span id="search_vaga_result"></span>
-
-            {% elif f.name == 'empresa' %}
-            <input name="empresa" {% if tipo_cadastro == '' %}disabled{% endif %} autocomplete="off" id="id_empresa" onkeyup="searchEmpresa(this)" type="text" class="form-control bg-light mb-2 is-invalid" value="{{empresa}}">                
-            <span id="search_empresa_result"></span>        
-                
-            {% else %}
-                {{f|add_class:'form-control  my-2 is-invalid'}}
-            {% endif %}
-            {% elif f.name == 'destaque' %}
-            {% if tipo_cadastro != '' %}                                                    
-                <div class="form-check form-switch" style="margin: 0; padding-left: 0;">  
-                {{f|add_class:'form-check-input my-2'|attr:'type:checkbox'|attr:'role=switch'|attr:"onclick=destacar()"}}
-                <span id="span_destaque">{% if f.value %}Sim, destacar.{% else %}Não destacar.{% endif %}</span>             
-            </div>
-            {% endif %}
-            {% elif f.name == 'cargo' %}
-            <input name="cargo"  {% if tipo_cadastro == '' %}disabled{% endif %}   autocomplete="off" id="id_vaga" onkeyup="searchVaga(this)" type="text" class="form-control bg-light mb-2" value="{{cargo}}">                
-            <span id="search_vaga_result"></span>
-
-            {% elif f.name == 'empresa' %}
-            {% if request.user.is_authenticated %}
-            <input name="empresa" {% if tipo_cadastro == '' %}disabled{% endif %} autocomplete="off" id="id_empresa" onkeyup="searchEmpresa(this)" type="text" class="form-control bg-light mb-2" value="{{empresa}}">                
-            <span id="search_empresa_result"></span>        
-            {% endif %}
-            {% else %}
-                {% if tipo_cadastro == '' %}
-                {{f|add_class:'form-control bg-light my-2'|attr:'disabled'}}
-                {% else %}
-                {{f|add_class:'form-control bg-light my-2'}}
+        {% endif %}                  
+        <div class="row">    
+            <div class="col d-flex">
+                <h2 class="text-start text-uppercase">{{ tipo_cadastro }} VAGA OFERTADA</h2>
+                {% if request.user.is_authenticated %}
+                    {% if tipo_cadastro == 'Alterar' %}
+                    <span class="ms-auto"><a class="btn btn-btfl bg-danger" href="{% url 'vagas:remover_vaga' id%}">Remover</a></span>
+                    {% endif %}      
+                    {% if tipo_cadastro == '' %}
+                    <span class="ms-auto"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:listar_candidatos' id mes ano%}">Candidatos</a></span>      
+                    {% endif %}
                 {% endif %}
-            {% endif  %}
-            <div class="invalid-feedback mb-2">
-                {{f.errors}}
-            </div>
-            {% endfor %}
-            {% if tipo_cadastro == '' %}
-            <a href="{% url 'vagas:candidatarse' id %}" class="btn btn-primary text-white w-100 mt-3">
-                CANDIDATAR-SE
-            </a>
-            {% endif %}
-            {% if tipo_cadastro != '' %}
-            <button type="submit" class="btn btn-primary text-white w-100 mt-3">
-            {{tipo_cadastro}}
-            </button>
-            {% endif %}
 
-        </div>      
-    </div>    
+                    <span class="{% if not request.user.is_authenticated %}ms-auto{% else %}{% if tipo_cadastro == 'cadastrar' %}ms-auto{% else %}ms-2{% endif %}{% endif %}"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:vagas' %}">Voltar para ver vagas</a></span>
+                
+                    {% if request.user.is_authenticated %}
+                    {% if tipo_cadastro == '' %}
+                    <span class="ms-2"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:alterar_vaga' id %}"><i class="fas fa-edit"></i></a></span>
+                    {% endif %}
+                    {% if tipo_cadastro == 'alterar' %}
+                    <span class="ms-2"><a class="btn btn-btfl bg-primary" href="{% url 'vagas:visualizar_vaga' id %}">Voltar</a></span>
+                    {% endif %}
+                {% endif %}      
+            </div>
+        </div>
+        <form id="form_cadastro_vaga" {% if tipo_cadastro != '' %}method="post"{% endif %} class="form w-100 text-start mt-3">
+            <div class="row">
+                <div class="col pt-3">
+                    <h4 class="px-4">Detalhes da vaga:</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col pt-3 px-5">
+                    {% csrf_token %}
+                    {% for f in form %}                
+                    {% if not f.name in hidden %}
+                    
+                        <label class="text-uppercase" for="id_{{f.name}}">{{f.label}}:</label>
+                    
+                    {% endif %}
+                    {% if f.errors %}
+                    {% if f.name == 'cargo' %}
+                    <input name="cargo"  {% if tipo_cadastro == '' %}disabled{% endif %}   autocomplete="off" id="id_vaga" onkeyup="searchVaga(this)" type="text" class="form-control bg-light mb-2 is-invalid" value="{{cargo}}">                
+                    <span id="search_vaga_result"></span>
+
+                    {% elif f.name == 'empresa' %}
+                    <input name="empresa" {% if tipo_cadastro == '' %}disabled{% endif %} autocomplete="off" id="id_empresa" onkeyup="searchEmpresa(this)" type="text" class="form-control bg-light mb-2 is-invalid" value="{{empresa}}">                
+                    <span id="search_empresa_result"></span>        
+                        
+                    {% else %}
+                        {{f|add_class:'form-control  my-2 is-invalid'}}
+                    {% endif %}
+                    {% elif f.name == 'destaque' %}
+                    {% if tipo_cadastro != '' %}                                                    
+                        <div class="form-check form-switch" style="margin: 0; padding-left: 0;">  
+                        {{f|add_class:'form-check-input my-2'|attr:'type:checkbox'|attr:'role=switch'|attr:"onclick=destacar()"}}
+                        <span id="span_destaque">{% if f.value %}Sim, destacar.{% else %}Não destacar.{% endif %}</span>             
+                    </div>
+                    {% endif %}
+                    {% elif f.name == 'cargo' %}
+                    <input name="cargo"  {% if tipo_cadastro == '' %}disabled{% endif %}   autocomplete="off" id="id_vaga" onkeyup="searchVaga(this)" type="text" class="form-control bg-light mb-2" value="{{cargo}}">                
+                    <span id="search_vaga_result"></span>
+
+                    {% elif f.name == 'empresa' %}
+                    {% if request.user.is_authenticated %}
+                    <input name="empresa" {% if tipo_cadastro == '' %}disabled{% endif %} autocomplete="off" id="id_empresa" onkeyup="searchEmpresa(this)" type="text" class="form-control bg-light mb-2" value="{{empresa}}">                
+                    <span id="search_empresa_result"></span>        
+                    {% endif %}
+                    {% else %}
+                        {% if tipo_cadastro == '' %}
+                        {{f|add_class:'form-control bg-light my-2'|attr:'disabled'}}
+                        {% else %}
+                        {{f|add_class:'form-control bg-light my-2'}}
+                        {% endif %}
+                    {% endif  %}
+                    <div class="invalid-feedback mb-2">
+                        {{f.errors}}
+                    </div>
+                    {% endfor %}
+                    {% if tipo_cadastro == '' %}
+                    <a href="{% url 'vagas:candidatarse' id %}" class="btn btn-primary text-white w-100 mt-3">
+                        CANDIDATAR-SE
+                    </a>
+                    {% endif %}
+                    {% if tipo_cadastro != '' %}
+                    <button type="submit" class="btn btn-primary text-white w-100 mt-3">
+                    {{tipo_cadastro}}
+                    </button>
+                    {% endif %}
+
+                </div>      
+            </div>   
+            <div class="row">
+                <div class="col py-4 text-start d-flex">
+                <div class="m-auto py-5">
+                    <p><b>Para mais informações sobre essa vaga:</b></p>
+                    <p><i class="fab fa-whatsapp me-1"></i> (22) 99793-5451</p>
+                    <p><i class="fas fa-phone-alt me-1"></i> (22) 2525-9205</p>
+                    <p><i class="fas fa-map-marker-alt me-2"></i> Av. Alberto Braune - 223 (Antiga rodoviária)</p>
+                </div>
+                </div>
+            </div>
+    </div>
+</div> 
     <style>
         #form_cadastro_vaga ul, li{
             list-style: none;
@@ -208,5 +212,24 @@
         document.getElementById('search_empresa_result').innerHTML=''
     }
 </script>
-
+{% if visualizar %}
+<style>
+#form_cadastro_vaga{
+    background-color: white;
+    border-radius: 20px;
+}
+label{
+    font-weight: 600;
+}
+.form-control{
+    margin-bottom: 10px !important;
+    margin-top: 5px !important;
+}
+.bg-light{
+    border-radius: 30px !important;
+    background-color: white !important;
+    border-color: rgba(116, 116, 116, 0.112) !important;
+}
+</style>
+{% endif %}
 {% endblock %}
