--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -77,6 +77,7 @@
               </button>
               <ul id="menu-perfil" class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
                 {% if request.user.is_superuser %}
+                <li><a class="dropdown-item py-2 text-center" href="{% url 'vagas:painel_administrativo' %}">Painel</a></li>
                 <li><a class="dropdown-item py-2 text-center" href="/admin/">Administração</a></li>
                 {% endif %}
                 <!-- <li><a class="dropdown-item py-2 text-center" href="#">Meu perfil</a></li> -->
