--- a/vagas/templates/vagas/encaminhamento_online.html
+++ b/vagas/templates/vagas/encaminhamento_online.html
@@ -53,7 +53,14 @@
                     <p style="margin: 0 30px;">                
                     O candidato deverá enviar uma mensagem com seu currículo em anexo,  para o endereço: <br>
                     <h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.empresa.email}}</h1>
-                    {% endif %}      
+                    {% endif %} 
+                    {% if vaga.empresa.contato_link %}
+                    <hr>
+                    <b><i class="fas fa-home me-2"></i>DE FORMA PRESENCIAL</b>
+                    <p style="text-indent:  30px;">                
+                        O candidato deverá se encaminhar ao endereço eletronico abaixo e seguir com o cadastro pelo link:<br>
+                        <a href="{{vaga.empresa.link}}"><h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.link}}</h1></a>
+                    {% endif %}    
                     <hr>  
                     <p class="text-center" style="margin-top: 30px;">
                         Desde já agradecemos e continuamos a disposição de V. srª para maiores
