--- a/vagas/templates/footer.html
+++ b/vagas/templates/footer.html
@@ -8,11 +8,8 @@
               Av. Alberto Braune, 223 - Centro, Nova Friburgo - RJ, 28613-001<br>
               09:00 às 17:00 de Seg. à Sex. <br>
               (22) 2525-9205</p>
-            <p class="mx-auto mt-4 text-light">
-              <a class="text-light" target="_blank" href="https://www.facebook.com/desenvolvenf/">
-                <i class="fa-brands fa-facebook me-4 mb-2"></i>
-              </a>                
-              <a class="text-light" target="_blank" href="https://www.instagram.com/desenvolvenf/">
+            <p class="mx-auto mt-4 text-light">              
+              <a class="text-light" target="_blank" href="https://www.instagram.com/casadotrabalhadornovafriburgo/">
                 <i class="fa-brands fa-instagram me-4 mb-2"></i>
               </a>
             </p>
