--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -109,7 +109,7 @@
             </div>
             <div class="d-flex my-auto">
               <div class="d-social d-flex ms-2 me-4">
-                <a href="https://www.instagram.com/desenvolvenf/" class="a-social m-auto">
+                <a href="https://www.instagram.com/casadotrabalhadornovafriburgo/" class="a-social m-auto">
                 <i class="fa-brands fa-instagram"></i></a>
                   </div>
             </div>
