--- a/vagas/templates/vagas/cadastrar_empresa.html
+++ b/vagas/templates/vagas/cadastrar_empresa.html
@@ -58,7 +58,7 @@
             {% elif f.name == 'contato_link' %}
             <div class="form-check form-switch" style="margin: 0; padding-left: 0;">                                                
                 {{f|add_class:'form-check-input my-2'|attr:'type:checkbox'|attr:'role=switch'|attr:"onclick=fcontato_link()"}}
-                <span id="span_contato_whatsapp">{% if f.value %}Sim.{% else %}Não.{% endif %}</span>
+                <span id="span_contato_link">{% if f.value %}Sim.{% else %}Não.{% endif %}</span>
             </div>            
             {% else %}
                 {%if f.name == 'cnpj' %}
