--- a/vagas/templates/vagas/encaminhamento_online.html
+++ b/vagas/templates/vagas/encaminhamento_online.html
@@ -56,9 +56,9 @@
                     {% endif %} 
                     {% if vaga.empresa.contato_link %}
                     <hr>
-                    <b><i class="fas fa-home me-2"></i>DE FORMA PRESENCIAL</b>
+                    <b><i class="fas fa-home me-2"></i>DE FORMA ELETRÔNICA</b>
                     <p style="text-indent:  30px;">                
-                        O candidato deverá se encaminhar ao endereço eletronico abaixo e seguir com o cadastro pelo link:<br>
+                        O candidato deverá se encaminhar ao endereço eletrônico abaixo e realizar o cadastro através do link:<br>
                         <a href="{{vaga.empresa.link}}"><h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.link}}</h1></a>
                     {% endif %}    
                     <hr>  
