--- a/vagas/templates/vagas/encaminhamento_online.html
+++ b/vagas/templates/vagas/encaminhamento_online.html
@@ -59,7 +59,7 @@
                     <b><i class="fas fa-home me-2"></i>DE FORMA ELETRÔNICA</b>
                     <p style="text-indent:  30px;">                
                         O candidato deverá se encaminhar ao endereço eletrônico abaixo e realizar o cadastro através do link:<br>
-                        <a href="{{vaga.empresa.link}}"><h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.link}}</h1></a>
+                        <a href="{{vaga.empresa.link}}"><h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.empresa.link}}</h1></a>
                     {% endif %}    
                     <hr>  
                     <p class="text-center" style="margin-top: 30px;">
