--- a/vagas/static/css/template.css
+++ b/vagas/static/css/template.css
@@ -435,243 +435,6 @@ h4 {
 .menuMobile {
   display: none;
 }
-@media (max-width: 1367px) {
-  .banner_destaque {
-    flex-direction: column !important;
-  }
-  .banner_img_destaque {
-    height: 30vw !important;
-    width: 76vw !important;
-  }
-}
-
-@media (max-width: 990px) {
-  .banner_img_destaque {
-    height: 250px !important;
-    width: 648px !important;
-  }
-  .btn {
-    padding-left: 16rem !important;
-    padding-right: 16rem !important;
-  }
-  #esp-2 {
-    padding-left: 3.8rem !important;
-    padding-right: 3.8rem !important;
-  }
-  .btn-acesso {
-    padding-left: 1rem !important;
-    padding-right: 1rem !important;
-  }
-  .container-fluid .navbar-brand {
-    margin: auto;
-  }
-  #login-button {
-    margin: auto !important;
-  }
-  nav .navbar-toggler {
-    display: none !important;
-  }
-}
-@media (max-width: 942px) {
-  .mx-2 {
-    display: none;
-  }
-  .btn-acesso {
-    margin: 0px;
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
-  }
-  li {
-    font-size: 20px !important;
-    list-style: none !important;
-  }
-  a {
-    color: black !important;
-    text-decoration: none !important;
-  }
-  .menuMobile {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-left: 55vw;
-  }
-  .menuMobile a {
-    color: #fff !important;
-    font-size: 3vw !important;
-    margin-bottom: 2vw !important;
-  }
-  .linkLogin {
-    display: none;
-  }
-  .logo-nf {
-    width: 2.5vw;
-    margin-bottom: 2.5vw;
-    margin-left: 1vw;
-  }
-  .texto-nf {
-    font-size: 2vw;
-    padding-bottom: 1.5vw;
-  }
-  .item {
-    margin-bottom: 5vw;
-    width: 240px;
-    padding-top: 0px;
-    padding-bottom: 15px;
-    border-radius: 10px;
-    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
-  }
-  .banner-img {
-    height: 101px;
-    border-radius: 10px;
-    width: 240px;
-  }
-  #esp-2 {
-    font-size: 14px;
-  }
-  .me-3 {
-    width: 10vw !important;
-  }
-}
-@media (max-width: 792px) {
-  li {
-    font-size: 20px !important;
-    list-style: none !important;
-  }
-  a {
-    color: black !important;
-    text-decoration: none !important;
-  }
-  .menuMobile {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-left: 50vw;
-  }
-  .banner_img_destaque {
-    height: 200px !important;
-    width: 552px !important;
-  }
-  .btn {
-    padding-left: 12.5rem !important;
-    padding-right: 12.5rem !important;
-  }
-  .btn-acesso {
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
-  }
-  .nv-titulo h2 {
-    font-size: 3vw;
-  }
-  .navbar-toggler {
-    margin: 30px auto;
-  }
-  .mobile-flex-column {
-    display: flex;
-    flex-direction: column;
-  }
-  .mobile-flex-column .col:last-child {
-    padding: 20px 40px;
-  }
-}
-@media (max-width: 592px) {
-  .banner_img_destaque {
-    height: 150px !important;
-    width: 316px !important;
-  }
-  .btn {
-    padding-left: 5.5rem !important;
-    padding-right: 5.5rem !important;
-  }
-  .menuMobile {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-left: 45vw;
-  }
-  .nv-titulo h2 {
-    font-size: 1rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .menuMobile {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    margin-left: 20vw;
-  }
-  .menuMobile a {
-    color: #fff !important;
-    font-size: 5vw !important;
-    margin-bottom: 2vw !important;
-  }
-  .linkLogin {
-    display: none;
-  }
-  .logo-nf {
-    width: 5vw;
-    margin-bottom: 2.5vw;
-    margin-left: 1vw;
-  }
-  .texto-nf {
-    font-size: 3vw;
-    padding-bottom: 1.5vw;
-  }
-  .nv-titulo h2 {
-    font-size: 0.9rem;
-  }
-}
-@media(min-width: 601px) and (max-width:992px){
-  #mainBlock{
-    padding: 0rem !important;
-    margin: 0rem !important;
-    width: 95vw !important;
-  }
-  #mainBlock .container{
-    padding: 0px !important;
-  }
-  .banner_destaque{
-    width: 100vw !important;
-  }
-  .banner_img_destaque{
-    width: 69.9vw !important;
-  }
-  .text-destaque button{
-    padding: 10px 170px !important;
-  }
-  .nv-titulo h1{
-    font-size: 20px;
-  }
-  .logo{
-    width: 90vw !important;
-  } 
-}
-@media (min-width: 320px) and (max-width: 600px) {
-  #mainBlock{
-    padding: 0rem !important;
-    margin: 0rem !important;
-    width: 95vw !important;
-  }
-  #mainBlock .container{
-    padding: 0px !important;
-  }
-  .banner_destaque{
-    width: 100vw !important;
-  }
-  .banner_img_destaque{
-    width: 80vw !important;
-  }
-  .text-destaque button{
-    padding: 10px 55px !important;
-  }
-  .nv-titulo h1{
-    display: none;
-  }
-  .logo{
-    width: 90vw;
-  }
-}
 .btn-btfl{
   /* box-shadow:  1px 1px 2px #507b9ba9; */
   background-color: #547E9E !important;
@@ -687,3 +450,128 @@ h4 {
   color: white;
   box-shadow:  4px 4px 2px #507b9b;
 }
+.div-vaga-container{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.div-vaga-container-links{
+  margin-left:0px;
+  width: 100%;
+}
+.div-vaga-container-links span{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.div-vaga-container-links a{
+  width: 100px;
+  padding: 10px;
+}
+.div-vaga{
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  background-color: white; 
+  padding: 20px 30px; 
+  border-radius: 30px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
+              0 32px 64px -48px rgba(0,0,0,0.5);
+}
+.div-vaga .cargo, .qtd-vaga{
+  text-align: center;
+}
+.div-vaga .cargo{
+  font-size: 20px;
+}
+.qtd-vaga{
+  display: flex;
+  justify-content: space-between;
+}
+.qtd-vaga p{
+  font-size: 12px;
+}
+.div-detalhes-vaga{
+  margin-top: 10px;
+}
+.detalhamento-vaga{
+  display: grid;
+  gap: 10px;
+  margin-top: 20px;
+  grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+}
+.div-vagas-ofertadas{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 80px;
+}
+.nv-titulo h1{
+  font-size: 30px;
+}
+.div-nav-superior{
+  display: flex;
+  align-items: center;
+  gap:20px;
+  position: relative;
+}
+.nv-login{
+  position: absolute;
+  right: 25px;
+}
+@media(max-width:1024px){
+  .div-vaga .cargo{
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+}
+@media(max-width:768px){
+  .div-vaga-container-links a{
+    width: 80px;
+    font-size: 12px;
+    padding: 10px;
+  }
+  .nv-titulo h1{
+    font-size: 20px;
+  }
+  .div-nav-superior{
+    display: flex;
+    align-items: center;
+    gap:20px;
+    position: relative;
+  }
+  .nv-login{
+    position: absolute;
+    right: 25px;
+  }
+  .div-vagas-ofertadas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .div-principal-vagas-ofertadas{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+} 
+@media(max-width:425px){
+  .div-vaga .cargo{
+    font-size: 12px;
+  }
+} 
+@media(max-width:375px){
+  .nv-titulo h1{
+    font-size: 12px;
+  }
+  .texto-nf{
+    font-size: 12px;
+  }
+} 
+@media(max-width:330px){
+    
+} 
