--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -56,23 +56,24 @@
   <header class="row fixed-top">
     <div class="col" style="border-bottom: 1px solid rgb(255, 255, 255);">
       <div class="row" id="nav-superior">
-        <div class="col px-4 d-flex text-light">
+        <div class="col text-light div-nav-superior">
           <div class="logo-nf nv-sp">
             <a href="#">
               <img src="{% static 'images/brasao-nf.png' %}" class="img-fluid">
             </a>
           </div>
-          <p class="texto-nf my-auto ms-3">PREFEITURA DE NOVA FRIBURGO</p>
+          <p class="texto-nf">PREFEITURA DE NOVA FRIBURGO</p>
           
-          <div class="linkLogin nv-login my-auto ms-auto">
+          <div class="linkLogin nv-login">
             {% if not request.user.is_authenticated %}
             <a href="{% url 'vagas:login' %}" class="btn my-auto btn-acesso" type="submit">
-              <i class="fa-solid fa-user-check me-2"></i> Login</a>
+              <i class="fa-solid fa-user-check">Login</i>
+            </a>
             {% else %}
             <div class="dropdown">
               <button class="btn btn-acesso my-auto" type="button" id="dropdownMenuPerfil" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                <i class="fa-solid fa-user-check me-2"></i>
+                <i class="fa-solid fa-user-check"></i>
                 {{ request.user.first_name }}
               </button>
               <ul id="menu-perfil" class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
@@ -101,7 +102,7 @@
             </a>
           </div>
           <div class="nv-titulo my-auto ms-4 pt-2">
-            <h1 style="font-size: 30px;">Casa do Trabalhador</h1>
+            <h1>Casa do Trabalhador</h1>
           </div>
           <div class="nv-social ms-auto d-flex">
             <div class="d-flex my-auto me-3">
@@ -120,7 +121,7 @@
   </header>  
   {% block nav %}{% endblock %}
 
-  <div id="mainBlock" class="main-content pb-5 px-5 mx-4">
+  <div id="mainBlock" class="main-content">
    {% block main %}{% endblock %}
   </div>
   {% block footer %}
