--- a/vagas/templates/header_.html
+++ b/vagas/templates/header_.html
@@ -23,7 +23,7 @@
         </div>
         <div class="nv-login ms-auto">
           {% if not request.user.is_authenticated %}
-          <a href="{% url 'vagas:login' %}" class="btn text-uppercase text-light" type="submit"><i
+          <a href="{% url 'autenticacao:login' %}" class="btn text-uppercase text-light" type="submit"><i
               class="fa-regular fa-user me-2"></i> Login</a>
           {% else %}
           <div class="dropdown">
@@ -37,7 +37,7 @@
               <li><a class="dropdown-item py-2 text-center" href="/admin/">Administração</a></li>
               {% endif %}
               <li>
-                <a class="dropdown-item text-center py-2" href="{% url 'vagas:logout' %}">
+                <a class="dropdown-item text-center py-2" href="{% url 'autenticacao:logout' %}">
                   <i class="fa-solid fa-arrow-right-from-bracket me-2"></i></i> Logout
                 </a>
               </li>
