--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -66,7 +66,7 @@
           
           <div class="linkLogin nv-login">
             {% if not request.user.is_authenticated %}
-            <a href="{% url 'vagas:login' %}" class="btn my-auto btn-acesso" type="submit">
+            <a href="{% url 'autenticacao:login' %}" class="btn my-auto btn-acesso" type="submit">
               <i class="fa-solid fa-user-check">Login</i>
             </a>
             {% else %}
@@ -84,7 +84,7 @@
                 <!-- <li><a class="dropdown-item py-2 text-center" href="#">Meu perfil</a></li> -->
                 <!-- <li><a class="dropdown-item py-2" href="#">Meu perfil</a></li> -->
                 <li>
-                  <a class="dropdown-item text-center py-2" href="{% url 'vagas:logout' %}">
+                  <a class="dropdown-item text-center py-2" href="{% url 'autenticacao:logout' %}">
                     <i class="fa-solid fa-arrow-right-from-bracket me-2"></i></i> Logout
                   </a>
                 </li>
