--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -37,7 +37,7 @@
 
 <body id="body" class="container-fluid d-flex flex-column">
   <div id="preloading" style="background-color: white;">
-    <img class="mx-auto mt-auto img-fluid logo" src="/static/images/logo_casa.png" alt="">
+    <img class="mx-auto mt-auto img-fluid logo" src="/static/images/logo_branco.png" alt="">
     <div class="mx-auto mb-auto lds-ellipsis">
       <div></div>
       <div></div>
@@ -98,11 +98,11 @@
         <div class="col d-flex py-2">
           <div class="img-logo my-auto ms-3">
             <a href="/">
-              <img src="{% static 'images/logo_casa.png' %}" class="img-fluid">
+              <img src="{% static 'images/logo.png' %}" class="img-fluid">
             </a>
           </div>
           <div class="nv-titulo my-auto ms-4 pt-2">
-            <h1>Casa do Trabalhador</h1>
+            <h1>Subsecretaria de Trabalho e Renda - Casa do Trabalhador</h1>
           </div>
           <div class="nv-social ms-auto d-flex">
             <div class="d-flex my-auto me-3">
