--- a/autenticacao/templates/adm/cadastro.html
+++ b/autenticacao/templates/adm/cadastro.html
@@ -34,7 +34,7 @@
     <div class="col-4 d-flex pb-5" style="overflow-y: scroll; max-height: 100vh; background-color: white !important;">
         <div class="m-auto d-flex flex-column">
             <a href="/" class="mx-auto mt-5 ">
-                <img style="max-height: 180px;" class="img-fluid mb-5 mx-auto" src="{% static 'images/logo_casa.png' %}" alt="">                  
+                <img style="max-height: 180px;" class="img-fluid mb-5 mx-auto" src="{% static 'images/logo_login.png' %}" alt="">                  
             </a>
             <h2 class="text-center">NOVO CADASTRO</h2>
             {% if messages %}
