--- a/autenticacao/templates/adm/login.html
+++ b/autenticacao/templates/adm/login.html
@@ -35,7 +35,7 @@
     <div class="col-4 d-flex" style="background-color: white;">
         <div class="m-auto d-flex flex-column">
             <a href="/" class="mx-auto">
-                <img style="max-height: 180px;" class="img-fluid mb-5 mx-auto" src="{% static 'images/logo_casa.png' %}" alt="">                
+                <img style="max-height: 180px;" class="img-fluid mb-5 mx-auto" src="{% static 'images/logo_login.png' %}" alt="">                
             </a>
             {% if messages %}
             <ul class="messages mb-4">
