--- a/vagas/templates/footer.html
+++ b/vagas/templates/footer.html
@@ -2,13 +2,13 @@
     <div class="col">
       <div class="row  pt-5 pb-4 mobile-flex-column footer-sup text-light">
         <div class="col d-flex justify-content-center">
-          <img class="img-fluid logo m-auto" style="height: 200px;" src="/static/images/logo_casa.png" alt="">
+          <img class="img-fluid logo m-auto" style="height: 400px;" src="/static/images/logo_sem_fundo.png" alt="">
           <div class="d-flex flex-column">
-            <p class="mx-auto mt-4 text-f">
+            <p class="mx-auto mt-auto text-f">
               Av. Alberto Braune, 223 - Centro, Nova Friburgo - RJ, 28613-001<br>
               09:00 às 17:00 de Seg. à Sex. <br>
               (22) 2525-9205</p>
-            <p class="mx-auto mt-4 text-light">              
+            <p class="mx-auto mt-4 mb-auto text-light">              
               <a class="text-light" target="_blank" href="https://www.instagram.com/casadotrabalhadornovafriburgo/">
                 <i class="fa-brands fa-instagram me-4 mb-2"></i>
               </a>
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="col d-flex justify-content-center">
-          <div class="me-5">
+          <div class="me-5 my-auto">
             <p class="text-light pb-3 text-center">Plataformas</p>
             <ul>
               <li><a href="#">Capacitação Profissional</a></li>
@@ -25,7 +25,7 @@
               <li><a href="#">Finanças</a></li>
             </ul>
           </div>
-          <div>
+          <div class="my-auto">
             <p class="text-light pb-3 text-center">Sistemas</p>
             <ul>
               <li><a href="#">Bem Estar Animal</a></li>
