--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -210,10 +210,10 @@
               </div>
               <div class="row">
                 <div class="col pt-1 div-detalhes-vaga">
-                  <div class="ms-auto text-center">
+                  <div class="ms-auto" id="detalhes_vaga">
                     <a
                       href="{% url 'vagas:visualizar_vaga' vaga.id %}"
-                      class="btn btn-success"
+                      class="btn btn-success btn_detalhes"
                     >
                       DETALHES DA VAGA
                     </a>
