--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -201,9 +201,9 @@
     
                     <div class="qtd-vaga">
                       {% if vaga.experiencia == 'Sim' %}
-                      <span class="ms-4 text-gray"><i>Requer experiência!</i></span>
+                      <span class="me-4 text-gray"><i>Requer experiência!</i></span>
                       {% endif %}
-                      <p>Vagas: {{vaga.quantidadeVagas}}</p>
+                      <p class="my-auto">Vagas: {{vaga.quantidadeVagas}}</p>
                     </div>
                   </div>
                 </div>
