--- a/vagas/templates/vagas/vagas_disponiveis.html
+++ b/vagas/templates/vagas/vagas_disponiveis.html
@@ -202,12 +202,12 @@
                     <div>
                       <p class="my-auto">
                         {% if vaga.tipo_de_vaga != 'NML' %}
-                        <b>[{{vaga.get_tipo_de_vaga_display}}]</b>
+                        <b class="text-secondary text-uppercase">[ {{vaga.get_tipo_de_vaga_display}} ]</b>
                         {% endif %}
                         {% if vaga.experiencia == 'Não' %}
                         {% endif %}
                         {% if vaga.experiencia == 'Sim' %}
-                        <span class="ms-3 text-gray"><i>Requer experiência!</i>
+                        <span class="{% if vaga.tipo_de_vaga != 'NML' %}ms-3{% endif %} text-gray"><i>Requer experiência!</i>
                         </span>
                         {% else %}
 
