--- a/vagas/templates/template.html
+++ b/vagas/templates/template.html
@@ -77,8 +77,10 @@
                 {{ request.user.first_name }}
               </button>
               <ul id="menu-perfil" class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
-                {% if request.user.is_superuser %}
+                {% if request.user.is_staff %}
                 <li><a class="dropdown-item py-2 text-center" href="{% url 'vagas:painel_administrativo' %}">Painel</a></li>
+                {% endif %}
+                {% if request.user.is_superuser %}
                 <li><a class="dropdown-item py-2 text-center" href="/admin/">Administração</a></li>
                 {% endif %}
                 <!-- <li><a class="dropdown-item py-2 text-center" href="#">Meu perfil</a></li> -->
